--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "admin-panel-app",
+  "name": "bintang-jaya-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -11,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
