--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "color-name-list": "^10.22.0",
+    "color-namer": "^1.4.0",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
