--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-color": "^2.19.3",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.0",
     "sass": "^1.70.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
