--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.12.0",
     "sass": "^1.70.0",
+    "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
